--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,4 +1,24 @@
-/* Provide sufficient contrast against white background */
+a.navbar-brand {
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+
+html {
+    font-family: Arial;
+    font-size: 14px;
+}
+
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
 a {
   color: #0366d6;
 }
