--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -1,14 +1,34 @@
-﻿.ResumeViewerBody {
-    padding: 10px 20px 10px 20px;
-    width: 1000px;
-    border: 1px solid #888;
-    position: absolute;
-    left: calc(50% - 500px);
+﻿.ResumeViewerBody { /* Supplementing CSS Class MainContent */
+    padding: 20px 20px 60px 20px;
+    width: 1200px;
+    left: calc(50% - 600px);
 }
 
     .ResumeViewerBody a {
         text-decoration: none;
     }
+
+.TopFadeout {
+    position: fixed;
+    width: 1200px;
+    left: calc(50% - 600px);
+    top: 21px;
+    height: 20px;
+    padding: 0px 16px 0px 1px;
+    background-image: linear-gradient(#ffffff, rgba(255,255,255,0));
+    background-clip: content-box;
+}
+
+.BottomFadeout {
+    position: fixed;
+    width: 1200px;
+    left: calc(50% - 600px);
+    bottom: 21px;
+    height: 20px;
+    padding: 0px 16px 0px 1px;
+    background-image: linear-gradient(rgba(255,255,255,0), #ffffff 80%);
+    background-clip: content-box;
+}
 
 .FullName {
     font-size: 38px;
@@ -18,7 +38,6 @@
 .ContactInfo {
     float: right;
     padding-right: 10px;
-    text-align: right;
 }
 
 .Links .WebLink {
