--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -95,9 +95,13 @@
         float: right;
     }
 
-.EducationTimeLineEvent {
-    margin-bottom: 20px;
-}
+    .JobTimeLineEvent .Responsibilities {
+        max-width: 1050px;
+    }
+
+    .EducationTimeLineEvent {
+        margin-bottom: 20px;
+    }
 
     .EducationTimeLineEvent .Program {
         font-size: 18px;
