--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -64,6 +64,7 @@ code {
     background-color: white;
     overflow: auto;
     border: 1px solid #888;
+    border-radius: 8px;
     box-shadow: 0px 0px 16px 8px #00000040;
 }
 
