--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -151,3 +151,34 @@
 
 .ReferenceTopic {
 }
+
+
+@media print {
+
+    body {
+        overflow: auto;
+    }
+
+
+    .MainBackground {
+        display: none;
+    }
+
+    .ResumeViewerBody { /* Supplementing CSS Class MainContent */
+        position: static;
+        padding: 10px 0px 20px 20px;
+        width: 1200px;
+        left: 0px;
+        border: none;
+        box-shadow: none;
+        overflow: visible;
+    }
+
+    .Topic {
+        page-break-inside: avoid;
+    }
+
+    .TopFadeout, .BottomFadeout {
+        display: none;
+    }
+}
