--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -40,11 +40,17 @@
 }
 
 .PrintIcon {
-    margin: -17px 0px 0px 12px;
+    margin: -12px 0px 0px 12px;
     width: 23px;
     height: 23px;
     cursor: pointer;
+}
 
+.ChartIcon {
+    margin: -10px 0px 0px 10px;
+    width: 25px;
+    height: 20px;
+    cursor: pointer;
 }
 
 .ContactInfo {
@@ -199,7 +205,7 @@
         display: none;
     }
 
-    .PrintIcon {
+    .PrintIcon, .ChartIcon {
         display: none;
     }
 }
