--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -233,6 +233,12 @@
     margin: 0px !important;
 }
 
+.ToolTipPanel {
+    background-color: #f8f8f8;
+    padding: 5px;
+    box-shadow: 4px 4px 12px 2px #00000040;
+}
+
 @media print {
     body {
         overflow: auto;
