--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -3,6 +3,34 @@
     top: -2px;
 }
 
+.Loading {
+    position: absolute;
+    top: 200px;
+    left: calc(50% - 160px);
+    background-color: white;
+    width: 320px;
+    height: 50px;
+    border: 1px solid #aaa;
+    box-shadow: 4px 4px 12px 2px #00000040;
+    border-radius: 8px;
+    line-height: 47px;
+    font-size: 18px;
+    text-align: center;
+}
+
+.MenuIconSpacer {
+    display: inline-block;
+    width: 21px;
+}
+
+.HorizontalSpacer {
+}
+
+.ant-dropdown-menu-submenu-title .ant-dropdown-menu-item-icon {
+    position: relative;
+    top: -3px;
+}
+
 .ResumeViewerBody { /* Supplementing CSS Class MainContent */
     padding: 20px 20px 60px 20px;
     width: 1200px;
@@ -96,6 +124,10 @@
     line-height: 24px;
 }
 
+.JobTimeLineFilteType {
+    font-size: 12px;
+}
+
 .JobTimeLineEvent {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -157,6 +189,19 @@
         font-size: 16px;
         font-weight: bold;
     }
+
+    .JobTimeLineEvent .AlsoUsed {
+        background-color: white;
+    }
+
+        .JobTimeLineEvent .AlsoUsed .ant-collapse-header {
+            padding: 0px 0px 10px 0px;
+        }
+
+            .JobTimeLineEvent .AlsoUsed .ant-collapse-header .ant-collapse-arrow {
+                position: relative;
+                top: -2px;
+            }
 
     .JobTimeLineEvent .Responsibilities {
         max-width: 1050px;
@@ -334,6 +379,10 @@
     }
 
     .HiddenTopic {
+        display: none;
+    }
+
+    .AlsoUsed {
         display: none;
     }
 }
