--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -334,20 +334,55 @@
 .ReferenceTopic {
 }
 
-.recharts-default-legend {
-    padding: 5px !important;
+.ChartContainer {
+    width: 100%;
+    height: 280px;
+    position: relative;
+}
+
+.LegendPanel {
+    vertical-align: top;
+    display: inline-block;
+    width: 180px;
     border: 1px none #d8d8d8;
-    /* Border from: https://kovart.github.io/dashed-border-generator/ */
+    padding: 5px 5px 5px 0px;
     background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='black' stroke-width='1' stroke-dasharray='10%2c10' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
 }
 
-.recharts-legend-item {
-    margin: 0px !important;
+.LegendList {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+    .LegendList li {
+        cursor: pointer;
+        padding: 0px 5px 0px 5px;
+        margin: 0px 0px 0px 5px;
+        font-size: 14px;
+        line-height: 18px;
+    }
+
+
+        .LegendList li:hover {
+            background-color: #eee;
+        }
+
+        .LegendList li:before {
+            content: "◦ ";
+            position: relative;
+            top: 2px;
+            font-size: 20px;
+            line-height: 18px;
+        }
+
+.ChartPanel {
+    display: inline-block;
 }
 
 .ToolTipPanel {
     background-color: #f8f8f8;
-    padding: 5px;
+    padding: 5px 10px 5px 10px;
     box-shadow: 4px 4px 12px 2px #00000040;
 }
 
