--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -334,16 +334,21 @@
 .ReferenceTopic {
 }
 
-.ChartContainer {
+.ChartDialog .ant-modal-body {
+    padding: 0px;
+}
+
+.ChartModalContainer {
+    padding: 10px;
     width: 100%;
-    height: 280px;
+    height: 350px;
     position: relative;
 }
 
 .LegendPanel {
-    vertical-align: top;
+    vertical-align: middle;
     display: inline-block;
-    width: 180px;
+    width: 170px;
     border: 1px none #d8d8d8;
     padding: 5px 5px 5px 0px;
     background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='black' stroke-width='1' stroke-dasharray='10%2c10' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
@@ -376,8 +381,9 @@
             line-height: 18px;
         }
 
-.ChartPanel {
+.ChartContainer {
     display: inline-block;
+    width:calc(100% - 170px);
 }
 
 .ToolTipPanel {
