--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -346,31 +346,38 @@
 }
 
 .LegendPanel {
-    vertical-align: middle;
+    vertical-align: top;
     display: inline-block;
     width: 170px;
-    border: 1px none #d8d8d8;
-    padding: 5px 5px 5px 0px;
-    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='black' stroke-width='1' stroke-dasharray='10%2c10' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
+    border: 1px solid #ccc;
+}
+
+.LegendTitle {
+    padding: 0px 5px 0px 5px;
+    color: #222;
+    background-color: #ddd;
 }
 
 .LegendList {
     list-style: none;
     margin: 0px;
-    padding: 0px;
+    padding: 5px 0px 5px 0px;
 }
 
     .LegendList li {
         cursor: pointer;
         padding: 0px 5px 0px 5px;
-        margin: 0px 0px 0px 5px;
+        margin: 0px 5px 0px 5px;
         font-size: 14px;
         line-height: 18px;
     }
 
-
         .LegendList li:hover {
             background-color: #eee;
+        }
+
+        .LegendList li:hover span {
+            filter: brightness(0.75);
         }
 
         .LegendList li:before {
