--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -212,6 +212,9 @@
         font-size: 15px;
     }
 
+    .JobTimeLineEvent .SpecialLinks {
+        padding-left: 10px;
+    }
 
     .JobTimeLineEvent .JobEnviroment {
         font-style: italic;
@@ -338,11 +341,13 @@
     padding: 0px;
 }
 
-.ChartModalContainer {
+.ChartModalContent.Downloading .CloseIcon {
+    display: none;
+}
+
+.ChartContainer {
     padding: 10px;
     width: 100%;
-    height: 350px;
-    position: relative;
 }
 
 .LegendPanel {
@@ -376,9 +381,9 @@
             background-color: #eee;
         }
 
-        .LegendList li:hover span {
-            filter: brightness(0.75);
-        }
+            .LegendList li:hover span {
+                filter: brightness(0.75);
+            }
 
         .LegendList li:before {
             content: "◦ ";
@@ -388,9 +393,9 @@
             line-height: 18px;
         }
 
-.ChartContainer {
+.ChartPanel {
     display: inline-block;
-    width:calc(100% - 170px);
+    width: calc(100% - 170px);
 }
 
 .ToolTipPanel {
