--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,3 +1,11 @@
+* {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
+}
+
 body {
     position: absolute;
     left: 0px;
