Move data to sub class. Created ViewSwitch - needs more work

--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -352,6 +352,10 @@
     display: none;
 }
 
+.ChartModalContent.Downloading .ZoomInOutButton {
+    display: none;
+}
+
 .ChartContainer {
     padding: 10px;
     width: 100%;
