--- a/ClientApp/src/components/ResumeViewer.css
+++ b/ClientApp/src/components/ResumeViewer.css
@@ -1,6 +1,7 @@
 ﻿.Loading {
     position: absolute;
     top: 200px;
+    margin: 0 auto;
     left: calc(50% - 160px);
     background-color: white;
     width: 320px;
@@ -28,7 +29,7 @@
 
 .ResumeViewerBody { /* Supplementing CSS Class MainContent */
     padding: 20px 20px 60px 20px;
-    width: 1200px;
+    width: 1145px;
     left: calc(50% - 600px);
 }
 
@@ -38,7 +39,7 @@
 
 .TopFadeout, .BottomFadeout {
     position: fixed;
-    width: 1200px;
+    width: 1145px;
     left: calc(50% - 600px);
     height: 20px;
     border-radius: 8px;
@@ -130,6 +131,13 @@
     font-weight: normal;
     line-height: 24px;
 }
+
+.PrintableLabel {
+    position:relative;
+    top: 1px;
+    padding-right: 5px;
+}
+
 
 .JobTimeLineFilteType {
     font-size: 12px;
@@ -300,9 +308,9 @@
         border-left: 2px solid #888;
     }
 
-.SkillsColumns {
-    width: 100%;
-}
+    .SkillsColumns {
+        width: 100%;
+    }
 
     .SkillsColumns .LeftSkillsColumn,
     .SkillsColumns .RightSkillsColumn {
@@ -341,24 +349,54 @@
         vertical-align: middle;
     }
 
+    .SkillsList .SingleSkill {
+        white-space: nowrap;
+    }
+
+    .SkillsList .HighlightedSkill {
+        color: white;
+        background-color: dodgerblue;
+    }
+
 .ReferenceTopic {
 }
 
-.ChartDialog .ant-modal-body {
-    padding: 0px;
+.ChartTopic {
 }
 
-.ChartModalContent.Downloading .CloseIcon {
-    display: none;
+    .ChartTopic .ZoomInOutlinedIcon {
+        position: relative;
+        top: -5px;
+        font-size: 80%;
+    }
+
+.ChartPage {
+    padding: 20px 0px 20px 0px;
+    width: 1200px;
+    margin: 0 auto;
 }
 
-.ChartModalContent.Downloading .ZoomInOutButton {
-    display: none;
+.ChartTitle {
+    margin: 0px 20px 0px 20px;
+    border-bottom: 1px solid #ccc;
+    font-size: 20px;
+    font-weight: bold;
 }
 
-.ChartContainer {
-    padding: 10px;
+.ChartPage .ChartContainer {
+    padding: 20px 20px 10px 20px;
     width: 100%;
+}
+
+.ChartPanel {
+    display: inline-block;
+    width: calc(100% - 170px);
+}
+
+.ChartFooter {
+    margin: 0px 20px 0px 20px;
+    padding-top: 10px;
+    border-top: 1px solid #ccc;
 }
 
 .LegendPanel {
@@ -404,9 +442,13 @@
             padding-right: 6px;
         }
 
-.ChartPanel {
-    display: inline-block;
-    width: calc(100% - 170px);
+.TopicContent .ChartContainer {
+    padding-top: 20px;
+    width: 100%;
+}
+
+.HiddenTopic .ChartContainer {
+    opacity: 0.4;
 }
 
 .ToolTipPanel {
@@ -480,7 +522,7 @@
     .ResumeViewerBody { /* Supplementing CSS Class MainContent */
         position: static;
         padding: 10px 0px 20px 20px;
-        width: 1000px;
+        width: 1100px;
         left: 0px;
         border: none;
         box-shadow: none;
@@ -512,6 +554,10 @@
     }
 
     .AlsoUsed {
+        display: none;
+    }
+
+    .ZoomInOutlinedIcon {
         display: none;
     }
 }
